--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -1,3 +1,4 @@
+#~/.config/libinput-gestures.conf  
 # libinput-gestures-setup -r restart && libinput-gestures-setup -r autostart
 
 # gesture swipe right_up xdotool key control+Tab
