--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -1,5 +1,5 @@
 
-#~/.config/libinput-gestures.conf  
+#~/etc/libinput-gestures.conf  
 # https://discussion.fedoraproject.org/t/chriscowleyunix-libinput-gestures/33651
 # libinput-gestures-setup -r restart && libinput-gestures-setup -r autostart
 
